cdip-admin-portal/k8s/templates/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${KUBERNETES_NAMESPACE}
  labels:
    name: ${KUBERNETES_NAMESPACE}

---
apiVersion: v1
kind: Namespace
metadata:
  name: ${FUNCTIONS_NAMESPACE}
  labels:
    name: ${FUNCTIONS_NAMESPACE}

---
apiVersion: v1
kind: Namespace
metadata:
  name: ${METRICS-NAMESPACE}
  labels:
    name: ${METRICS-NAMESPACE}
