cdip-admin-portal/k8s/templates/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: postgres
spec:
  selector: 
    matchLabels: 
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: mdillon/postgis:11
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: cdip-postgres-pv-claim
