cdip-admin-portal/k8s/templates/04-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "${KUBERNETES_NAMESPACE}"
  name: cdip-api
spec:
  selector:
    matchLabels:
      cdip.component: cdip-api
  template:
    metadata:
      labels:
        cdip.component: cdip-api
    spec:
      volumes:
      - name: telegraf-config-volume
        configMap:
          name: telegraf-configmap
          items:
            - key: telegraf_conf
              path: telegraf.conf
      - name: metrics-writer-credentials
        secret:
          secretName: metrics-writer-credentials
          items:
            - key: credentials_json
              path: metrics-writer-credentials.json
      containers:
      - image: "${CDIP_API_IMAGE}"
        imagePullPolicy: Always
        name: cdip-api
        livenessProbe:
          httpGet:
            path: /
            port: 9999
            httpHeaders:
              - name: Host
                value: "${SITE_FQDN}"
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 9999
            httpHeaders:
              - name: Host
                value: "${SITE_FQDN}"
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
          - containerPort: 9999
      - name: telegraf
        image: telegraf:1.15
        ports:
          - containerPort: 8125
        volumeMounts:
          - name: telegraf-config-volume
            mountPath: "/etc/telegraf/"
            readOnly: true
          - name: metrics-writer-credentials
            mountPath: "/etc/cdip/"
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  namespace: "${KUBERNETES_NAMESPACE}"
  name: cdip-api
spec:
  type: NodePort
  ports:
  - port: 9999
    targetPort: 9999
  selector:
    cdip.component: cdip-api
