cdip-admin-portal/k8s/templates/08-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "${KUBERNETES_NAMESPACE}"
  name: cdip-portal
spec:
  selector: 
    matchLabels: 
      cdip.component: cdip-portal
  template:
    metadata:
      labels:
        cdip.component: cdip-portal
      annotations:
        prometheus.io/port: "9102"
    spec:
      imagePullSecrets:
        - name: gcr-secret
      # Mount secrets 
      volumes:
      %{ if CDIP_PORTAL_SOURCE_PATH != "" }
      - name: cdip-source
        hostPath:
          path: ${CDIP_PORTAL_SOURCE_PATH}
      %{ endif }
      - name: google-credentials
        secret:
          secretName: google-application-credentials
          items:
          - key: credentials_json
            path: "google_credentials.json"
      - name: telegraf-config-volume
        configMap:
          name: telegraf-configmap
          items:
            - key: telegraf_conf
              path: telegraf.conf
      - name: media-volume
        persistentVolumeClaim:
          claimName: cdip-shared-volume-pvc
      containers:
      - image: "cdip-portal:latest"
        imagePullPolicy: IfNotPresent
        name: cdip-portal
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
          - containerPort: 8000
        # Mount volumes
        volumeMounts:
        %{ if CDIP_PORTAL_SOURCE_PATH != "" }
        - name: cdip-source
          mountPath: "/var/www/app"
          readOnly: true
        %{ endif }
        - name: media-volume
          mountPath: /var/media_root
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  namespace: "${KUBERNETES_NAMESPACE}"
  name: cdip-portal
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 31010
  selector:
    cdip.component: cdip-portal
