cdip-admin-portal/k8s/templates/airflow-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-ext
  namespace: cdip-v1
spec:
  type: ExternalName
  externalName: airflow.airflow2-0.svc.cluster.local
  ports:
    - protocol: TCP
      port: 8080
