cdip-admin-portal/k8s/templates/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${KUBERNETES_NAMESPACE}
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
   - port: 5432
     nodePort: 31050
  selector:
   app: postgres
