cdip-admin-portal/k8s/templates/metrics-proxy-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics
  labels:
    name: metrics

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metrics
  name: cdip-metrics-proxy
spec:
  selector:
    matchLabels:
      cdip.component: cdip-metrics-proxy
  template:
    metadata:
      labels:
        cdip.component: cdip-metrics-proxy
    spec:
      volumes:
        - name: telegraf-config-volume
          configMap:
            name: telegraf-configmap
            items:
              - key: telegraf_conf
                path: telegraf.conf
        - name: metrics-writer-credentials
          secret:
            secretName: metrics-writer-credentials
            items:
            - key: credentials_json
              path: metrics-writer-credentials.json
      containers:
      - name: telegraf
        image: telegraf:1.15
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8125
            protocol: UDP
        volumeMounts:
          - name: telegraf-config-volume
            mountPath: "/etc/telegraf/"
            readOnly: true
          - name: metrics-writer-credentials
            mountPath: "/etc/cdip/"
            readOnly: true
---
apiVersion: v1
kind: Service
metadata:
  namespace: metrics
  name: cdip-metrics
spec:
  type: NodePort
  ports:
  - port: 8125
    targetPort: 8125
    protocol: UDP
    name: statsd
  selector:
    cdip.component: cdip-metrics-proxy
