cdip-admin-portal/k8s/templates/kong-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cdip-kong-ingress
  namespace: "${KUBERNETES_NAMESPACE}"
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/override: customized-kong-ingress
#    This below doesn't work with Kong. ingress comes up with the kong-proxy's external IP.
#    kubernetes.io/ingress.global-static-ip-name: site-ip-cdipdev
spec:
  rules:
#  TODO: have keycloak behind this ingress too?
  - host: "${AIRFLOW_FQDN}"
    http:
      paths:
      - path: /
        backend:
          serviceName: airflow
          servicePort: 8080
  - host: "${SITE_FQDN}"
    http:
      paths:
      - path: /
        backend:
          serviceName: cdip-portal
          servicePort: 8000
      - path: /api
        backend:
          serviceName: cdip-api
          servicePort: 9999
  tls:
    - secretName: ingress-tls
      hosts:
        - "${SITE_FQDN}"
        - "${AIRFLOW_FQDN}"
